--- a/Maven-july01/test-output/old/RegressionTest/toc.html
+++ b/Maven-july01/test-output/old/RegressionTest/toc.html
@@ -20,17 +20,17 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>ChromeTest (1/1/2)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>ChromeTest (0/0/4)</td><td valign='top' align='right'>
   <a href='ChromeTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>EdgeTest (1/1/2)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>EdgeTest (0/0/4)</td><td valign='top' align='right'>
   <a href='EdgeTest.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
